Fixed wrong padding

--- a/app/app.global.scss
+++ b/app/app.global.scss
@@ -29,7 +29,7 @@ body {
   background-color: #eeee;
   border-bottom: 1px solid rgba(184, 184, 184, 0.93);
   color: white;
-  padding: 15px 24px !important;
+  padding: 10px 24px !important;
   -webkit-app-region: drag;
   .ant-page-header-heading-title {
     // color: white;
